Use scoped package name @akhilesharora/abdm-abha-sdk
Scoped name makes unofficial status clearer

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "abdm-abha-sdk",
+  "name": "@akhilesharora/abdm-abha-sdk",
   "version": "1.0.0",
   "description": "ABDM ABHA (Ayushman Bharat Health Account) SDK for Node.js - V3 API integration for Indian healthcare systems",
   "main": "dist/index.js",
